src/styles.css
/* You can add global styles to this file, and also import other style files */

body{
    margin:0px;
    padding:0px;
}

*{
    border-radius: 0px !important;
}

/* Reset blue outline */
*:focus,*:active, .form-control:focus {
   outline: 0px !important;
   box-shadow: none;
   -webkit-appearance:none;
}

.title {
    font-size: 24px;
    text-align: center;
    /* text-shadow: 1px 1px 0px rgb(216, 213, 213), 2px 2px 3px rgba(0,0,0,0.5); */
    font-weight: bold;
    margin-bottom: 7px;
    font-family: 'Lora', serif;
    background-color: #666666;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    color: transparent;
    text-shadow: rgba(255,255,255,0.5) 0px 2px 2px;
}

.app-body{
    box-sizing: border-box;    
    /* padding: 10px; */
}

#article-list-container{
    /* height: 500px; */
    overflow: scroll;
    background-color: white;
    /* margin-top: -5px; */
}

#leftlist, .right-content{
    padding-top:10px;
}

#leftlist{
    /* padding-left: 10px; */
    background-color: burlywood;
    width:30%;
    font-size: 80%;
    padding:10px;
}

.dropdown-menu{
    left:auto !important;
    right:0 !important;
}

#leftlist .list-group-item.active{
    /* background-color:rgba(201, 135, 69, 0.795); */
    box-shadow: 
         0px 11px 8px -10px #CCC,
         0px -11px 8px -10px #CCC; 

    background-color: white;
    color:black;
    border:brown;
}

#leftlist .article-list-title{
    font-size:14px;
    margin-bottom: 0px;    
}

#leftlist p{
    margin-bottom: 0px;
    font-size: 12px;
}
#search-box{
    font-size: 14px;
    outline: 0;
    border-left: none;
    border-color: white;
}

.search-prefix{
    border-right: 0px;
    background-color: white;
    border-color: white;
}

.right-content{
    /* background-color: papayawhip; */
    /* background-image: url('assets/images/bg-dirty-paper.jpg'); */
    background-size: cover;
    background-position: center center;
    /* margin-left: -15px; */
}

.info-row{
    margin-bottom: 10px;
}

/* .btn-delete-article{
    position: absolute;
    top: 7px;
    right: 0px;
    color: red;
    display: none;
} */

.btn-article-list{
    float: left;
    margin-left: -15px;
    /* border-radius: 0 10px 10px 0 !important; */
    background-color:burlywood;
    border-color: burlywood;
    color: black;
    /* z-index: 1001;
    box-shadow: 3px 10px 10px grey; */
}

.btn-article-list:focus{
   outline: none !important;
   box-shadow: none;
}

.btn-article-list:hover{
    text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
    /* text-shadow: 1px 1px 0px rgb(216, 213, 213), 2px 2px 3px rgba(0,0,0,0.5); */
    background-color:burlywood;
    border-color: burlywood;
    color:black;
    /* background-color: #fdc300;
    border-color: #fdc300; */
    /* background-color: brown;
    border-color: brown; */
}

input#headline, #editor{
    border: none;
    outline: none !important;
    box-shadow: none;
    background:transparent;
    margin: 0 auto;
    /* max-width: 800px; */
}

input#headline {
    font-family: 'Lora', serif;
}

input#headline.font-large {
    font-size: 24px;
}
input#headline.font-normal {
    font-size: 19px;
}
input#headline.font-small {
    font-size: 16px;
}

#editor{
    resize: none;
    /* font-family: 'Eczar', serif; */ /* Good serif font */
    font-family: 'Special Elite', cursive;  /* Type Writer */
    font-size: 18px;
    line-height: 1.5em;
    height:455px;
    margin-bottom: 58px;
}

::-webkit-scrollbar {
  /* -webkit-appearance: none; */
  width: 10px;
}

::-webkit-scrollbar-thumb {
  /* border-radius: 5px; */
  background-color: rgba(0,0,0,.1);
  /* -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5); */
}

.footer-alert{
    font-size: 12px;
    padding: 2px 10px !important ;
    border-radius: 3px !important;
    margin-top: -46px;
}

.footer-alert .close{
    font-size: 16px;
}

.word-count-missed{
    background-color: red;
    color:white;
}

.word-count-low{
    background-color: greenyellow;
}

.word-count-medium{
    background-color: lightgreen;
}

.word-count-high{
    background-color: green;
    color:white;
}

.word-count-very-high{
    background-color: darkgreen;
    color:white;
}

.celebrate{
    background-image: url('assets/images/bg-celebration.gif') !important;
}

.modal-header, .modal-footer{
    border:0px !important;
}

.modal-content{
    background-color:burlywood !important;
    font-size: 14px;
}

.modal-body, .modal-footer{
    background-color: white;
}

.title .btn-link {
    color: black;
}

